@@ -1,3 +1,11 @@
+From 8668be2 (closure-adv):
+==========================
+
+In prisim/bispectrum_phase.py,
+
+(*) In member function save() of class ClosurePhase, fix bug by
+adding self as the first argument for the function inputs.
+
 From da67b42 (closure-adv):
 ==========================
 
